# GraphTA

./: LICENSE  README.md  pyproject.toml
scripts/: run_meta_adapt.sh
src/: batch.py  config.py  dataloader.py  meta_adapt.py  molecule_finetune.py  pretrain_AM.py  pretrain_CP.py  pretrain_Contextual.py  pretrain_EP.py  pretrain_GraphCL.py  pretrain_GraphLoG.py  pretrain_GraphMVP.py  pretrain_GraphMVP_hybrid.py  pretrain_IG.py  pretrain_JOAO.py  pretrain_JOAOv2.py  pretrain_Motif.py  pretrain_hybrid.py  splitters.py  util.py
src/auxilearn/: __init__.py  hypernet.py  implicit_diff.py  optim.py
src/datasets/: __init__.py  molecule_3D_dataset.py  molecule_3D_masking_dataset.py  molecule_contextual_datasets.py  molecule_contextual_datasets_utils.py  molecule_datasets.py  molecule_graphcl_dataset.py  molecule_graphcl_masking_dataset.py  molecule_motif_datasets.py
src/models/: __init__.py  auto_encoder.py  molecule_gnn_model.py  schnet.py
src/wandb/: latest-run
src/wandb/run-20231020_162539-map2dgul/: run-map2dgul.wandb
src/wandb/run-20231020_162539-map2dgul/files/: conda-environment.yaml  config.yaml  wandb-metadata.json
src/wandb/run-20231020_162659-bk2x2bq1/: run-bk2x2bq1.wandb
src/wandb/run-20231020_162659-bk2x2bq1/files/: conda-environment.yaml  config.yaml  wandb-metadata.json
src/wandb/run-20231020_162734-88ceyiiw/: run-88ceyiiw.wandb
src/wandb/run-20231020_162734-88ceyiiw/files/: conda-environment.yaml  config.yaml  requirements.txt  wandb-metadata.json
src/wandb/run-20231020_163317-6bo6r2pi/: run-6bo6r2pi.wandb
src/wandb/run-20231020_163317-6bo6r2pi/files/: config.yaml  wandb-metadata.json  (+1 more)
src/wandb/run-20231020_163513-hqwewc5h/: run-hqwewc5h.wandb
(+4 files in other folders)
